Correction FireFox

--- a/static/style.css
+++ b/static/style.css
@@ -236,6 +236,7 @@ footer .copyright li {
     justify-content: space-between;
     padding: 5px 10px 5px 10px;
     width: 700px;
+    margin: 15px 150px;
 }
 
 .offres .element {
